# huffmanAlg

./: CMakeLists.txt
src/: alg_tools.cpp  alg_tools.h  data_types.h  element.h  main.cpp  rtv_data_types.cpp  rtv_data_types.h  vector_bb.cpp  vector_bb.h
tests/: test_vector_bb.cpp
